logs/pyaudioidmon.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/audioidmon'...
Listing './lib/python3.5/site-packages/audioidmon/cli'...
Compiling './lib/python3.5/site-packages/audioidmon/cli/audioidmon_add_fingerprint.py'...
***   File "./lib/python3.5/site-packages/audioidmon/cli/audioidmon_add_fingerprint.py", line 39
    print "Add fingerprint to audioid monitor service:"
                                                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/audioidmon/cli/audioidmon_batch_monitoring.py'...
***   File "./lib/python3.5/site-packages/audioidmon/cli/audioidmon_batch_monitoring.py", line 53
    print "Batch report generation:"
                                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/audioidmon/cli/audioidmon_delete_all_fingerprints.py'...
***   File "./lib/python3.5/site-packages/audioidmon/cli/audioidmon_delete_all_fingerprints.py", line 36
    print "Delete all fingerprints from audioid monitor service:"
                                                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/audioidmon/cli/audioidmon_delete_fingerprint.py'...
***   File "./lib/python3.5/site-packages/audioidmon/cli/audioidmon_delete_fingerprint.py", line 38
    print "Add fingerprint to audioid monitor service:"
                                                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/audioidmon/cli/audioidmon_extract_fingerprint.py'...
***   File "./lib/python3.5/site-packages/audioidmon/cli/audioidmon_extract_fingerprint.py", line 38
    print "Extract fingerprint from audio file:"
                                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/audioidmon/cli/audioidmon_license.py'...
***   File "./lib/python3.5/site-packages/audioidmon/cli/audioidmon_license.py", line 37
    print "Get license status from audioid monitor service:"
                                                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/audioidmon/cli/audioidmon_list_fingerprint_ids.py'...
***   File "./lib/python3.5/site-packages/audioidmon/cli/audioidmon_list_fingerprint_ids.py", line 38
    print "Get fingerprint ids from audioid monitor service:"
                                                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/audioidmon/cli/audioidmon_monitor_fingerprint.py'...
***   File "./lib/python3.5/site-packages/audioidmon/cli/audioidmon_monitor_fingerprint.py", line 39
    print "Monitor fingerprint:"
                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/audioidmon/cli/audioidmon_status.py'...
***   File "./lib/python3.5/site-packages/audioidmon/cli/audioidmon_status.py", line 37
    print "Get system status audioid monitor service:"
                                                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/audioidmon/cli/audioidmon_version.py'...
***   File "./lib/python3.5/site-packages/audioidmon/cli/audioidmon_version.py", line 37
    print "Get version number from audioid monitor service:"
                                                           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/decorator-4.1.2.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyaudioidmon-2.0.0b2.egg-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/validators'...
Listing './lib/python3.5/site-packages/validators/i18n'...
Listing './lib/python3.5/site-packages/validators-0.12.0.egg-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
